# weatherpoller

./: CMakeLists.txt  README.md  makefile  memory.c  memory.h  output.c  output.h  utils.c  utils.h  weather.c  weather.h  wsp.c  wsp.h  wspusb.c  wspusb.h
cmake/: FindLibUSB.cmake
win32/: getopt.c
